Login Added --reopen required
need to change to auth repository, currently it is in controller
